--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+    <img src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="sleepy lion." />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="sleepy lion." title="Sleepy Lion" />
   </body>
 </html>
